# pyarallel

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVX_REVIEW.md  Makefile  README.md  SECURITY.md  TASKS.md  VISION.md  index.html  index.md  llms.txt  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  smoke_test.py
.github/workflows/: ci.yml  codspeed.yml  release.yml
api-reference/async/: index.html  index.md
api-reference/configuration-api/: index.html
api-reference/core/: index.html  index.md
api-reference/decorators/: index.html
api-reference/rate-limiting/: index.html  index.md
articles/: what-happens-when-api-job-dies.md
benchmarks/: README.md  RESULTS.md  __init__.py  _session_bench.py  _workloads.py  bench.py
benchmarks/codspeed/: test_memory.py  test_public_api.py
benchmarks/results/: 2026-07-14-reusable-session-cpython312-run1.json  2026-07-14-reusable-session-cpython312-run2.json  2026-07-14-reusable-session-cpython314.json
cookbook/: index.html  index.md
cookbook/bulk-file-download/: index.html  index.md
cookbook/cpu-fanout/: index.html  index.md
cookbook/dataset-enrichment/: index.html  index.md
cookbook/docker-registry-cleanup/: index.html  index.md
cookbook/embeddings/: index.html  index.md
cookbook/github-bulk-repo-changes/: index.html  index.md
cookbook/llm-batch-calls/: index.html  index.md
cookbook/ncbi-entrez-batch/: index.html  index.md
cookbook/secrets-rotation/: index.html  index.md
cookbook/streaming-etl/: index.html  index.md
cookbook/web-scraping/: index.html  index.md
development/CONTRIBUTING/: index.html
development/devx-principles/: index.html
development/policies/: index.html
development/roadmap/: index.html
docs/: index.md
docs/api-reference/: async.md  configuration-api.md  core.md  rate-limiting.md
docs/cookbook/: bulk-file-download.md  cpu-fanout.md  dataset-enrichment.md  docker-registry-cleanup.md  embeddings.md  github-bulk-repo-changes.md  index.md  llm-batch-calls.md  ncbi-entrez-batch.md  secrets-rotation.md  streaming-etl.md  web-scraping.md
docs/development/: devx-principles.md  policies.md  roadmap.md
docs/getting-started/: choosing-an-api.md  comparison.md  installation.md  quickstart.md
docs/user-guide/: advanced-features.md  best-practices.md  configuration.md  real-world-patterns.md  testing.md  troubleshooting.md
examples/: 01_basic_usage.py  02_api_calls_with_rate_limiting.py  03_cpu_bound_processing.py  04_batch_processing.py  05_configuration.py  06_resilient_api_jobs.py  07_production_api_job.py  README.md  resilience_demo.py
getting-started/choosing-an-api/: index.html  index.md
getting-started/comparison/: index.html  index.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html  index.md
pyarallel/: __init__.py  _plan.py  _procexec.py  _run.py  aio.py  checkpoint.py  config.py  config_manager.py  core.py  decorators.py  limiter.py  policies.py  result.py  stop.py
sandbox/: sandbox_test.py
search/: search_index.json
tests/: api_snapshot.txt  conftest.py  smoke.py  test_api_snapshot.py  test_async.py  test_async_sources.py  test_batch.py  test_checkpoint.py  test_checkpoint_info.py  test_config_manager.py  test_cookbook_examples.py  test_decorator.py  test_env_config.py  test_interpreter.py  test_item_key.py  test_limiter.py  test_max_errors.py  test_metadata.py  test_parallel_map.py  test_parity.py  test_production_template.py  test_pyarallel.py  test_result.py  test_retry.py  test_run_status.py  test_session_benchmark.py  test_starmap.py  test_stop.py  test_streaming.py  typing_assertions.py
user-guide/advanced-features/: index.html  index.md
user-guide/best-practices/: index.html  index.md
user-guide/configuration/: index.html
user-guide/real-world-patterns/: index.html
user-guide/testing/: index.html  index.md
(+22 files in other folders)
