[project]
name = "pyarallel"
version = "0.1.0"
description = "A powerful parallel execution library for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncer>=0.0.8",
    "cachetools>=5.5.1",
    "cloudpickle>=3.1.1",
    "dspy-ai>=2.5.43",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "json-repair>=0.35.0",
    "jupyter>=1.1.1",
    "litellm>=1.59.3",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-material[imaging]>=9.5.50",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=threader --cov-report=html"
testpaths = [
    "tests",
]
