[project]
name = "pyarallel"
version = "0.6.0"
description = "The fan-out layer for rate-limited APIs — parallel map with rate limiting, retry, and structured errors. Sync and async, zero dependencies."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
    { name = "Mehmet Oner Yalcin", email = "oneryalcin@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/oneryalcin/pyarallel"
Repository = "https://github.com/oneryalcin/pyarallel.git"
Documentation = "https://oneryalcin.github.io/pyarallel"

[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyarallel"]

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E/W=pycodestyle, F=pyflakes, I=isort, UP=pyupgrade, B=bugbear, SIM=simplify

[tool.ruff.lint.isort]
known-first-party = ["pyarallel"]

[dependency-groups]
# `test` stands alone: the free-threaded CI jobs install only this group —
# the dev group cannot build on 3.13t (cffi, via mkdocs-material[imaging]).
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23",
]
dev = [
    { include-group = "test" },
    "ruff>=0.15.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-material[imaging]>=9.5.50",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.14.1",
    "build>=1.0.0",
    "twine>=6.0.0",
]

[tool.mypy]
strict = true
